@@ -6,6 +6,7 @@
 	  unified table driven pragma handling, pragma argument type checking
 	* support/Util/dbuf.c: (dbuf_set_size) allow to set size equal to the
 	  current one - version 1.1.3
+	* src/SDCCmain.c: (setParseWithComma) substituted brain damaged strtok
 
 2006-12-13 Raphael Neider <rneider AT web.de>
 
